--- a/package.json
+++ b/package.json
@@ -1,39 +1,39 @@
 {
-	"name": "christmas-mcp-mariadb",
-	"version": "1.0.0",
-	"description": "A MariaDB MCP (Model Context Protocol) CLI tool for database operations",
-	"main": "bin/index.js",
-	"type": "module",
-	"bin": {
-		"christmas-mcp": "./bin/index.js"
-	},
-	"scripts": {
-		"start": "node ./bin/index.js"
-	},
-	"keywords": [
-		"mcp",
-		"copilot",
-		"mariadb",
-		"sql",
-		"cli",
-		"database",
-		"model-context-protocol"
-	],
-	"author": "Nest",
-	"license": "MIT",
-	"dependencies": {
-		"mysql2": "^3.6.5",
-		"dotenv": "^16.3.1"
-	},
-	"engines": {
-		"node": ">=18.0.0"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/nest/christmas-mcp-mariadb.git"
-	},
-	"bugs": {
-		"url": "https://github.com/nest/christmas-mcp-mariadb/issues"
-	},
-	"homepage": "https://github.com/nest/christmas-mcp-mariadb#readme"
+  "name": "christmas-mcp-mariadb",
+  "version": "1.0.0",
+  "description": "A Model Context Protocol (MCP) server for MariaDB/MySQL database operations",
+  "type": "module",
+  "main": "bin/index.js",
+  "bin": {
+    "christmas-mcp": "bin/index.js"
+  },
+  "scripts": {
+    "start": "node bin/index.js",
+    "dev": "node --watch bin/index.js",
+    "build": "echo 'No build step required for ES modules'",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [
+    "mcp",
+    "model-context-protocol",
+    "mariadb",
+    "mysql",
+    "database",
+    "sql",
+    "server"
+  ],
+  "author": "Nest",
+  "license": "MIT",
+  "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.0.0",
+    "mysql2": "^3.6.5",
+    "zod": "^3.22.4"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Chr1stm4s/christmas-mcp-mariadb.git"
+  }
 }
